Adiciona receita bolo

--- a/README.html
+++ b/README.html
@@ -10,5 +10,6 @@
     <h1>Livro de receitas</h1>
     <p>Bem vindo ao meu livro de receitas</p>
     <li>Strogonoff de  Frango</li>
+    <ul>Bolo de cenoura</ul>
 </body>
 </html>
